# cse125-sp22-group5

./: .gitignore  BuildVSProject.bat  CMakeLists.txt  README.md  cmake_option.txt
Credits/: Credits.txt
Eternal_Ritual/: client-main.cpp  offline-main.cpp  server-main.cpp
Eternal_Ritual.xcodeproj/: project.pbxproj
Eternal_Ritual/ClientGame/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ClientGame.sln  ClientGame.vcxproj  ClientGame.vcxproj.filters  client-main.cpp  cmake_install.cmake
Eternal_Ritual/Core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Core.sln  cmake_install.cmake
Eternal_Ritual/Game/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Game.sln  Game.vcxproj  Game.vcxproj.filters  cmake_install.cmake
Eternal_Ritual/Game/CG/: CameraController.cpp  CameraController.hpp  CharacterController.cpp  CharacterController.hpp
Eternal_Ritual/Game/Character/: CharNode.cpp  CharNode.hpp  HitController.cpp  HitController.hpp  Hitbox.cpp  Hitbox.hpp  ImportCharHelper.cpp  ImportCharHelper.hpp
Eternal_Ritual/Game/Game.dir/Release/: Game.lib.recipe
Eternal_Ritual/Game/Game.dir/Release/Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Eternal_Ritual/Game/Magic/: AllMagic.inc  BaseMagic.cpp  BaseMagic.hpp  Circle.cpp  Circle.hpp  DragonMagic.cpp  DragonMagic.hpp  FireBall.cpp  FireBall.hpp  Flame.cpp  Flame.hpp  GroundSmash.cpp  GroundSmash.hpp  LightningMagic.hpp  LightningPhalanx.cpp  LightningPhalanx.hpp  LightningSpear.cpp  LightningSpear.hpp  Projectile.cpp  Projectile.hpp  ScatteredFire.cpp  ScatteredFire.hpp  StoneBlast.cpp  StoneBlast.hpp  Storm.cpp  Storm.hpp  ThousandBlade.cpp  ThousandBlade.hpp  Thunder.cpp  Thunder.hpp  ThunderShock.cpp  ThunderShock.hpp
Eternal_Ritual/Game/Map/: HittableObject.cpp  HittableObject.hpp  ImportMapHelper.cpp  ImportMapHelper.hpp  MapBoxObject.cpp  MapBoxObject.hpp  MapSystemManager.cpp  MapSystemManager.hpp
Eternal_Ritual/Game/Release/: Game.lib
Eternal_Ritual/Game/UI/: AllUI.inc  BarNode.cpp  BarNode.hpp  ButtonNode.cpp  ButtonNode.hpp  Constant.hpp  Cursor.cpp  Cursor.hpp  DeathScene.cpp  DeathScene.hpp  HPBarNode.cpp  HPBarNode.hpp  HUDNode.cpp  HUDNode.hpp  InputBoxNode.cpp  InputBoxNode.hpp  Logo.cpp  Logo.hpp  MagicButton.cpp  MagicButton.hpp  MagicShader.fs  StartSceneUI.cpp  StartSceneUI.hpp  UI.hpp
Eternal_Ritual/Game/newMagic/: LightningMagic.cpp
Eternal_Ritual/KGLEngine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Engine.cpp  Engine.hpp  KGLEngine.sln  KGLEngine.vcxproj  KGLEngine.vcxproj.filters  cmake_install.cmake
Eternal_Ritual/KGLEngine/Geometry/: Geometry.cpp  Geometry.hpp  Particle3DRenderer.cpp  ParticleRenderer.cpp  Skybox.cpp  Sprite.cpp  TextRenderer.cpp  UnitCube.cpp
Eternal_Ritual/KGLEngine/KGLEngine.dir/Release/KGLEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Eternal_Ritual/KGLEngine/Node/: CameraNode.cpp  LightNode.cpp  Node.cpp  Node.hpp  Particle3DNode.cpp  ParticleNode.cpp  SpriteNode.cpp  TextNode.cpp  UINode.cpp
Eternal_Ritual/KGLEngine/Release/: KGLEngine.lib
Eternal_Ritual/KGLEngine/Shading/: AlphaShader.cpp  Image.cpp  Image.hpp  PBRShader.cpp  Particle3DShader.cpp  ParticleShader.cpp  Shader.cpp  Shader.hpp  SpriteShader.cpp  Texture.cpp  Texture.hpp
Eternal_Ritual/KGLEngine/SkeletalAnimation/: Animator.cpp  Animator.hpp  Bone.cpp  Bone.hpp
Eternal_Ritual/KGLEngine/System/: Animation.cpp  Animation.hpp  AudioBuffer.cpp  AudioBuffer.hpp  Font.cpp  Font.hpp  FontLibrary.cpp  FontLibrary.hpp  Input.cpp  Input.hpp
Eternal_Ritual/KGLEngine/Toolkit/: assimp_helper.h  glm_helper.h
Eternal_Ritual/Network/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Network.sln  Network.vcxproj  Network.vcxproj.filters  NetworkSetting.inc  cmake_install.cmake
Eternal_Ritual/Network/ClientSide/: ClientSocket.cpp  ClientSocket.hpp  clientSocket.cpp  clientSocket.hpp  common.hpp
Eternal_Ritual/Network/Network.dir/Release/Network.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Eternal_Ritual/Network/Packet/: EventPb.cpp  EventPb.hpp  PbData.cpp  PbData.hpp  StatePb.cpp  StatePb.hpp  eventPb.cpp  eventPb.hpp  gameData.pb.cc  gameData.pb.h  gameData.proto  pbData.cpp  pbData.hpp  statePb.cpp  statePb.hpp
Eternal_Ritual/Network/Release/: Network.lib
Eternal_Ritual/Network/ServerSide/: ServerSocket.cpp  ServerSocket.hpp  common.hpp  serverSocket.cpp  serverSocket.hpp
Eternal_Ritual/OfflineGame/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  OfflineGame.sln  OfflineGame.vcxproj  OfflineGame.vcxproj.filters  cmake_install.cmake  offline-main.cpp
Eternal_Ritual/OfflineGame/OfflineGame.dir/Release/: OfflineGame.exe.recipe
Eternal_Ritual/OfflineGame/OfflineGame.dir/Release/OfflineGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Eternal_Ritual/ServerGame/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ServerGame.sln  ServerGame.vcxproj  ServerGame.vcxproj.filters  cmake_install.cmake  server-main.cpp
Eternal_Ritual/ServerGame/ServerGame.dir/Release/: ServerGame.exe.recipe
Eternal_Ritual/ServerGame/ServerGame.dir/Release/ServerGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
KGLEngine/: main.cpp
KGLEngine.xcodeproj/: project.pbxproj
KGLEngine/Game/: global.hpp  includes.h  magics.h  (+2 more)
Resources/: Map.fbx
(+368 files in other folders)
