# Created by Kangming Yu on 5/23/22.

cmake_minimum_required(VERSION 3.18) 
project(KGLEngine)  
set(CMAKE_CXX_STANDARD 17)  


file(GLOB_RECURSE ALL_HEADER_FILES *.h *.hpp *.inc) 
file(GLOB_RECURSE ALL_SOURCE_FILES *.cpp *.c)

set(AllFile ${ALL_HEADER_FILES} ${ALL_SOURCE_FILES})

foreach(fileItem ${AllFile})       
    get_filename_component(PARENT_DIR "${fileItem}" DIRECTORY)
    string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" GROUP "${PARENT_DIR}")
    string(REPLACE "/" "\\" GROUP "${GROUP}")
    set(GROUP "${GROUP}")
    source_group("${GROUP}" FILES "${fileItem}")
endforeach()


add_library(KGLEngine STATIC ${AllFile})


set_target_properties(KGLEngine PROPERTIES FOLDER "Component")


list(APPEND KGLENGINE_THIRD_PARTY_LIB_INCLUDE ${ASSIMP_LIB_INCLUDE})
list(APPEND KGLENGINE_THIRD_PARTY_LIB_INCLUDE ${FREETYPE_LIB_INCLUDE})
list(APPEND KGLENGINE_THIRD_PARTY_LIB_INCLUDE ${GLEW_LIB_INCLUDE})
list(APPEND KGLENGINE_THIRD_PARTY_LIB_INCLUDE ${GLFW_LIB_INCLUDE})
list(APPEND KGLENGINE_THIRD_PARTY_LIB_INCLUDE ${GLM_LIB_INCLUDE})
list(APPEND KGLENGINE_THIRD_PARTY_LIB_INCLUDE ${SFML_LIB_INCLUDE})

target_include_directories(KGLEngine PUBLIC 
    ${PROJECT_ROOT_DIR}
    ${KGLENGINE_THIRD_PARTY_LIB_INCLUDE}
)


list(APPEND KGLENGINE_THIRD_PARTY_LIB_LIBS ${ASSIMP_LIB_LIBS})
list(APPEND KGLENGINE_THIRD_PARTY_LIB_LIBS ${FREETYPE_LIB_LIBS})
list(APPEND KGLENGINE_THIRD_PARTY_LIB_LIBS ${GLEW_LIB_LIBS})
list(APPEND KGLENGINE_THIRD_PARTY_LIB_LIBS ${GLFW_LIB_LIBS})
list(APPEND KGLENGINE_THIRD_PARTY_LIB_LIBS ${SFML_LIB_LIBS})

find_package(OpenGL REQUIRED)
list(APPEND KGLENGINE_THIRD_PARTY_LIB_LIBS ${OPENGL_gl_LIBRARY})

target_link_libraries(KGLEngine PUBLIC 
    ${KGLENGINE_THIRD_PARTY_LIB_LIBS}
)